configs.json added 2

--- a/Mishtalemli/configs.json
+++ b/Mishtalemli/configs.json
@@ -1,5 +1,5 @@
 {
   "server":"localhost",
   "port": 8080,
-  "credentials":"C:\\Users\\salomon\\dev\\credentials.json"
+  "credentials":"C:\\Users\\salomon\\Dev\\credentials.json"
 }
