--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
+#config
+configs.json
