--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-# config
-configs.json
+# configs
+Mishtalemli/configs.json
